#598 Add more memory to test configuration